interoptopus_backend_csharp/benches/Interop.cs

// Automatically generated by Interoptopus.

// Debug - write_imports 
using System;
using System.Collections;
using System.Collections.Generic;
using System.Runtime.InteropServices;
using My.Company;
using My.Company.Common;

// Debug - write_namespace_context 
namespace My.Company
{
    // Debug - write_class_context 
    public static partial class Interop
    {
        // Debug - write_native_lib_string 
        public const string NativeLib = "interoptopus_reference_project";

        // Debug - write_constant 
        public const byte U8 = (byte) 255;

        // Debug - write_constant 
        public const float F32_MIN_POSITIVE = (float) 0.000000000000000000000000000000000000011754944;

        // Debug - write_constant 
        public const int COMPUTED_I32 = (int) -2147483647;


        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "primitive_void")]
        public static extern void primitive_void();

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "primitive_void2")]
        public static extern void primitive_void2();

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "primitive_bool")]
        public static extern bool primitive_bool(bool x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "primitive_u8")]
        public static extern byte primitive_u8(byte x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "primitive_u16")]
        public static extern ushort primitive_u16(ushort x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "primitive_u32")]
        public static extern uint primitive_u32(uint x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "primitive_u64")]
        public static extern ulong primitive_u64(ulong x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "primitive_i8")]
        public static extern sbyte primitive_i8(sbyte x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "primitive_i16")]
        public static extern short primitive_i16(short x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "primitive_i32")]
        public static extern int primitive_i32(int x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "primitive_i64")]
        public static extern long primitive_i64(long x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "many_args_5")]
        public static extern long many_args_5(long x0, long x1, long x2, long x3, long x4);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "many_args_10")]
        public static extern long many_args_10(long x0, long x1, long x2, long x3, long x4, long x5, long x6, long x7, long x8, long x9);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ptr")]
        public static extern IntPtr ptr(ref long x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        /// # Safety
        /// 
        /// Parameter x must point to valid data.
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ptr_mut")]
        public static extern IntPtr ptr_mut(out long x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ptr_ptr")]
        public static extern IntPtr ptr_ptr(ref IntPtr x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ref_simple")]
        public static extern IntPtr ref_simple(ref long x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ref_mut_simple")]
        public static extern IntPtr ref_mut_simple(out long x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ref_option")]
        public static extern bool ref_option(ref long x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ref_mut_option")]
        public static extern bool ref_mut_option(out long x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "tupled")]
        public static extern Tupled tupled(Tupled x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "complex_args_1")]
        public static extern FFIError complex_args_1(Vec3f32 _a, ref Empty _b);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "complex_args_2")]
        public static extern IntPtr complex_args_2(SomeForeignType _cmplx);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "callback")]
        public static extern byte callback(InteropDelegate_fn_u8_rval_u8 callback, byte value);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "generic_1")]
        public static extern uint generic_1(Genericu32 x, Phantomu8 _y);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "generic_2")]
        public static extern byte generic_2(Genericu8 x, Phantomu8 _y);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "generic_3")]
        public static extern byte generic_3(IntPtr x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "generic_4")]
        public static extern byte generic_4(IntPtr x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "array_1")]
        public static extern byte array_1(Array x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        /// This function has documentation.
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "documented")]
        public static extern EnumDocumented documented(StructDocumented _x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ambiguous_1")]
        public static extern Vec1 ambiguous_1(Vec1 x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ambiguous_2")]
        public static extern Vec2 ambiguous_2(Vec2 x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ambiguous_3")]
        public static extern bool ambiguous_3(Vec1 x, Vec2 y);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "namespaced_type")]
        public static extern Vec namespaced_type(Vec x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "panics")]
        public static extern FFIError panics();

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "sleep")]
        public static extern void sleep(ulong millis);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "weird_1")]
        public static extern bool weird_1(Weird1u32 _x, Weird2u8 _y);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pattern_ascii_pointer_1")]
        public static extern uint pattern_ascii_pointer_1(string x);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pattern_ascii_pointer_len")]
        public static extern uint pattern_ascii_pointer_len(string x, UseAsciiStringPattern y);

        // Debug - write_function_overloaded 

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pattern_ffi_slice_1")]
        public static extern uint pattern_ffi_slice_1(FFISliceu32 ffi_slice);

        // Debug - write_function_overloaded 
        public static uint pattern_ffi_slice_1(uint[] ffi_slice) {
            var ffi_slice_pinned = GCHandle.Alloc(ffi_slice, GCHandleType.Pinned);
            var ffi_slice_slice = new FFISliceu32(ffi_slice_pinned, (ulong) ffi_slice.Length);
            try
            {
                return pattern_ffi_slice_1(ffi_slice_slice);
            }
            finally
            {
                ffi_slice_pinned.Free();
            }
        }

        // Debug - write_function 
        [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "pattern_ffi_slice_2")]
        public static extern Vec3f32 pattern_ffi_slice_2(FFISliceVec3f32 ffi_slice, int i);
